# splatbot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/actions/setup-venv/: action.yaml
.github/workflows/: ci.yaml  main.yaml  publish.yaml
scripts/: prepare_changelog.py  release.sh  release_notes.py
src/splatbot/: __init__.py  cli.py  controller.py  macro.py  main.py  simulation.py  start.py
tests/: test_macro.py
vagrant/: Basefile  Vagrantfile  make_vagrantfile.py
