[project]
name = "splatbot"
version = "0.1.0"
description = "Automate plotting detailed posts in Splatoon wirelessly based on BlueZ, and optimize its efficiency by treating the process as a variant of Traveling Salesman Problem (TSP)."
authors = [{name = "necusjz", email = "necusjz@gmail.com"}]
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "Pillow>=9.2.0",
    "click>=8.1.3",
    "matplotlib>=3.6.3",
    "numpy>=1.23.2",
    "nxbt>=0.1.4",
    "tqdm>=4.64.0",
]

[project.urls]
changelog = "https://github.com/necusjz/splatbot/blob/main/CHANGELOG.md"
repository = "https://github.com/necusjz/splatbot"

[project.optional-dependencies]
dev = [
    "twine>=1.11.0",
    "packaging",
]

[project.scripts]
splatbot = "splatbot.cli:main"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "splatbot"
