# https://setuptools.pypa.io/en/latest/userguide/quickstart.html
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "splatbot"
dynamic = ["version"]
description = "Automate plotting posts in Splatoon based on BlueZ, and optimize its efficiency via Traveling Salesman Problem (TSP)."
authors = [{name = "necusjz", email = "necusjz@gmail.com"}]
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "Pillow>=9.2.0",
    "click>=8.1.3",
    "matplotlib>=3.6.3",
    "numpy>=1.23.2",
    "nxbt>=0.1.4",
    "scikit-image>=0.19.3",
    "tqdm>=4.64.0",
    "tsp-solver2>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.3",
    "isort>=5.6.4",
    "packaging>=23.1",
    "pytest>=7.2.1",
    "ruff>=0.1.2",
    "tabulate>=0.9.0",
    "twine>=1.11.0",
]

[project.scripts]
splatbot = "src.splatbot.cli:main"

[project.urls]
Changelog = "https://github.com/necusjz/splatbot/blob/main/CHANGELOG.md"
Repository = "https://github.com/necusjz/splatbot"

[tool.setuptools.packages.find]
exclude = [
    "scripts*",
    "tests*",
    "vagrant*",
]

[tool.setuptools.dynamic]
version = {attr = "src.splatbot.version.VERSION"}
