[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splatbot"
dynamic = ["version"]
description = "Automate plotting posts in Splatoon based on BlueZ, and optimize its efficiency via Traveling Salesman Problem (TSP)."
authors = [{name = "necusjz", email = "necusjz@gmail.com"}]
requires-python = ">=3.9,<3.12"
readme = "README.md"
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Intended Audience :: Science/Research"
]
dependencies = [
    "Pillow>=9.2.0",
    "click>=8.1.3",
    "matplotlib>=3.6.3",
    "numpy>=1.23.2",
    "nxbt>=0.1.4",
    "scipy>=1.9.1",
    "tqdm>=4.64.0",
    "tsp-solver2>=0.4.1"
]

[project.optional-dependencies]
dev = [
    "build>=1.0.3,<2.0.0",
    "isort>=5.6.4",
    "packaging>=23.1",
    "pytest>=7.2.1",
    "ruff>=0.1.2",
    "tabulate>=0.9.0",
    "twine>=4.0.2,<5.0.0"
]

[project.scripts]
splatbot = "splatbot.cli:main"

[project.urls]
Changelog = "https://github.com/necusjz/splatbot/blob/main/CHANGELOG.md"
Repository = "https://github.com/necusjz/splatbot"

[tool.hatch.build]
packages = ["src/splatbot"]
include = ["scripts", "tests", "vagrant"]

[tool.hatch.version]
path = "src/splatbot/__init__.py"
